# piicatcher_spacy

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish.yml
piicatcher_spacy/detectors/: __init__.py  spacy.py
tests/: docker-compose.yml  test_spacy_detector.py
